my-apps/minecraft-utils-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-utils-ui
  namespace: minecraft-utils-ui
  labels:
    app.kubernetes.io/name: minecraft-utils-ui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: minecraft-utils-ui
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minecraft-utils-ui
    spec:
      containers:
      - name: minecraft-utils-ui
        image: ghcr.io/matthewshan/minecraft-utils-ui:b72d2b4
        ports:
        - name: http
          containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 512Mi
