my-apps/minecraft-utils-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-utils-ui-service
  namespace: minecraft-utils-ui
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: minecraft-utils-ui
