my-apps/minecraft-utils-ui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minecraft-utils-ui-route
  namespace: minecraft-utils-ui
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
      sectionName: http
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "mc-info.mattshan.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: minecraft-utils-ui-service
          port: 3000
          weight: 1
